eks-setup/service1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: service1
  template:
    metadata:
      labels:
        app: service1
    spec:
      containers:
        - name: service1
          image: 088145138244.dkr.ecr.ap-southeast-1.amazonaws.com/service1:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
