eks-setup/service2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: service2
  template:
    metadata:
      labels:
        app: service2
    spec:
      containers:
        - name: service2
          image: 088145138244.dkr.ecr.ap-southeast-1.amazonaws.com/service2:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
